edit some text input

--- a/style.css
+++ b/style.css
@@ -1,14 +1,25 @@
-.blue{
-    color: blue;
-    font-weight:600;
+
+.bigPadding{
+  padding: 50px;
+  background-color:antiquewhite;
 }
-.container{
-  background: lightgrey;
-  margin: auto;
-  padding:auto;
+.heading2 {
+    color: white;
+    font-weight: 500;
+    text-align: center;
+    border: 1px solid black;
+    background-color: rgb(154, 153, 155) ;
+    padding: 25px 15px;
+    margin-top: 1%;
 }
 
-.text-right{
-  color:red;
-  font-weight: bold;
+.heading1{
+    color: white;
+    font-weight: 600;
+    text-align: center;
+    border-bottom: 1px solid gray;
+    background-color: rgb(71, 68, 68);
+    padding: 25px 15px;
+    margin-top: 1%;
 }
+
